# bleachbench

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.py
docs/: background.md  proposal.md
notebooks/dev/: bleaching.ipynb  climatology.ipynb  download.ipynb  regions.ipynb
src/: __init__.py
src/bleachbench/data/: dataloader.py
src/bleachbench/models/: cached_dataset.py  classic.py  evaluation.py  feature_cache.py  pytorch.py  torch_models.py
src/bleachbench/plotting/: spatial.py
src/bleachbench/processing/: dataloader.py  download.py  loader.py  processing.py  spatial.py
src/bleachbench/utils/: config.py  fileops.py  plotting.py  ui.py  utils.py
src/data/: dataloader.py
src/utils/: config.py
tests/: test_import.py  test_torch_models.py
