[project]
name = "bleachbench"
version = "0.1.0"
description = "A machine learning project to compare traditional and ML methods for predicting coral bleaching from time series data."
readme = "README.md"
requires-python = ">=3.8"
authors = [
  { name = "Orlando Timmerman" },
  { name = "Robert Rouse" },
  { name = "Akash Verma" },
  { name = "Matt Archer" }
]

dependencies = [
# Core data science libraries
"numpy>=1.21.0",
"pandas>=1.3.0",
"scipy>=1.7.0",

# Machine learning libraries
"scikit-learn>=1.0.0",
"xgboost>=1.5.0",
"lightgbm>=3.3.0",
"torch>=2.0.0",

# Time series analysis
"statsmodels>=0.13.0",
"prophet>=1.1.0",
"pmdarima>=2.0.0",

# Visualization
"matplotlib>=3.5.0",
"seaborn>=0.11.0",
"plotly>=5.0.0",

# Jupyter and notebooks
"jupyter>=1.0.0",
"ipykernel>=6.0.0",
"notebook>=6.4.0",

# Configuration and utilities
"pyyaml>=6.0",
"click>=8.0.0",
"tqdm>=4.62.0",

# Additional utilities
"requests>=2.27.0",
"python-dotenv>=0.19.0",
"joblib>=1.1.0"
]


[project.urls]
"Homepage" = "https://github.com/orlando-code/bleachbench" 

[project.optional-dependencies]
dev = [
# Testing
"pytest>=6.2.0",
"pytest-cov>=3.0.0",

# Code quality
"black>=22.0.0",
"flake8>=4.0.0",
"isort>=5.10.0",

# Documentation
"sphinx>=4.0.0",
"sphinx-rtd-theme>=1.0.0"
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
